tests/ui/pattern/deref-patterns/deref-non-pointer.rs
fn main() {
    match *1 { //~ ERROR: cannot be dereferenced
        _ => {}
    }
}
